Fixed incorrect method to create list from filtered games strema (#18)